# ts_ataos

./: .gitignore  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.cfg  setup.py
bin.src/: ataos_csc.py
conda/: meta.yaml
doc/: conf.py  developer_guide.rst  index.rst  manifest.yaml  version_history.rst
doc/developer-guide/: developer-guide.rst
doc/user-guide/: user-guide.rst
python/lsst/ts/: __init__.py
python/lsst/ts/ataos/: __init__.py  ataos_csc.py  config_schema.py  model.py
schema/: ATAOS.yaml
tests/: test_csc.py  test_model.py
tests/data/config/: _init.yaml  _labels.yaml  all_fields.yaml
tests/fake_controllers/: fake_athexapod.py  fake_atpneumatics.py
ups/: ts_ataos.cfg  ts_ataos.table
