[build-system]
requires = [ "setuptools", "setuptools_scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "ts_ataos"
description = "Auxiliary Telescope Active Optics System."
license = { text = "GPL" }
classifiers = [ "Programming Language :: Python :: 3" ]
urls = { documentation = "https://jira.lsstcorp.org/secure/Dashboard.jspa", repository = "https://github.com/lsst-ts/ts_ataos" }
dynamic = [ "version" ]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[project.scripts]
run_ataos_csc = "lsst.ts.ataos.ataos_csc:run_ataos_csc"

[tool.setuptools_scm]


[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
